add file repository